@@ -24,6 +24,8 @@ CGUIViewState* CGUIViewState::GetViewState(int windowId, const CFileItemList& it
 
   if (url.GetProtocol() == "shout")
     return new CGUIViewStateMusicShoutcast(items);
+  if (url.GetProtocol() == "lastfm")
+    return new CGUIViewStateMusicLastFM(items);
 
   if (items.IsSmartPlayList())
     return new CGUIViewStateMusicSmartPlaylist(items);
