@@ -83,3 +83,14 @@ protected:
   virtual bool AutoPlayNextItem();
   virtual void SaveViewState();
 };
+
+
+class CGUIViewStateMusicLastFM : public CGUIViewStateWindowMusic
+{
+public:
+  CGUIViewStateMusicLastFM(const CFileItemList& items);
+
+protected:
+  virtual bool AutoPlayNextItem();
+  virtual void SaveViewState();
+};
